# silkworm

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: test.yml
benches/: core.rs
docs/: README.md  architecture.md  configuration.md  core-concepts.md  errors-and-types.md  http-and-logging.md  middlewares.md  pipelines.md
examples/: callback_pipeline_demo.rs  export_formats_demo.rs  hackernews_spider.rs  hybrid_logger_demo.rs  lobsters_spider.rs  logger_configuration_demo.rs  quotes_spider.rs  quotes_spider_ergonomic.rs  quotes_spider_xpath.rs  sitemap_spider.rs  url_titles_spider.rs
examples/support/: mock_server.rs
scripts/: run_examples_offline.sh
src/: api.rs  engine.rs  errors.rs  http.rs  lib.rs  logging.rs  middlewares.rs  pipelines.rs  prelude.rs  request.rs  response.rs  runner.rs  spider.rs  types.rs
