[package]
name = "silkworm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Async-first web scraping framework (Rust port)"

[lib]
name = "silkworm"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
encoding_rs = "0.8"
rand = "0.8"
regex = "1.10"
wreq = { version = "6.0.0-rc.26", default-features = false, features = ["json", "gzip", "brotli", "deflate", "webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.19"
sxd-document = "0.3"
sxd_html = "0.1"
sxd-xpath = "0.4"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
url = "2.5"
thiserror = "1.0"
fasttime = "0.2"

[dev-dependencies]
# Add test dependencies here if needed

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
