[package]
name = "silkworm"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
description = "Async-first web scraping framework (Rust port)"
repository = "https://github.com/RustedBytes/silkworm"
homepage = "https://github.com/RustedBytes/silkworm"
documentation = "https://docs.rs/silkworm"
readme = "README.md"
keywords = ["web", "scraping", "crawler", "spider", "async"]
categories = ["web-programming", "web-programming::http-client"]

[lib]
name = "silkworm"
path = "src/lib.rs"

[dependencies]
bytes = "1.6"
encoding_rs = "0.8"
rand = "0.8"
regex = "1.10"
wreq = { version = "6.0.0-rc.26", default-features = false, features = ["json", "gzip", "brotli", "deflate", "webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.25"
sxd-document = "0.3"
sxd_html = "0.1"
sxd-xpath = "0.4"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
url = "2.5"
thiserror = "1.0"
fasttime = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[features]
default = ["scraper-atomic"]
scraper-atomic = ["scraper/atomic"]
