[package]
name = "silkworm-rs"
version = "0.1.2"
edition = "2024"
rust-version = "1.92"
license = "MIT"
description = "Async-first web scraping framework (Rust port)"
repository = "https://github.com/RustedBytes/silkworm"
homepage = "https://github.com/RustedBytes/silkworm"
documentation = "https://docs.rs/silkworm"
readme = "README.md"
keywords = ["web", "scraping", "crawler", "spider", "async"]
categories = ["web-programming", "web-programming::http-client"]

[lib]
name = "silkworm"
path = "src/lib.rs"

[[bench]]
name = "core"
harness = false
required-features = ["xpath"]

[[example]]
name = "quotes_spider_xpath"
required-features = ["xpath"]

[[example]]
name = "url_titles_spider"
required-features = ["cli-examples"]

[[example]]
name = "export_formats_demo"
required-features = ["cli-examples"]

[[example]]
name = "hackernews_spider"
required-features = ["cli-examples"]

[[example]]
name = "lobsters_spider"
required-features = ["cli-examples"]

[[example]]
name = "sitemap_spider"
required-features = ["cli-examples"]

[dependencies]
bytes = "1.11"
clap = { version = "4.5", features = ["derive"], optional = true }
encoding_rs = "0.8"
rand = "0.10.0"
regex = "1.12"
wreq = { version = "6.0.0-rc.27", default-features = false, features = ["json", "gzip", "brotli", "deflate", "webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

scraper = { git = "https://github.com/rust-scraper/scraper", rev = "f3132d9e06e652e2a4b3031bf7fc3ec3c6a817ce" }

xee-xpath = { version = "0.1.5", optional = true }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
url = "2.5"
thiserror = "2.0.18"
fasttime = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[features]
default = ["scraper-atomic"]
scraper-atomic = ["scraper/atomic"]
xpath = ["dep:xee-xpath"]
cli-examples = ["dep:clap"]
